# FrameworkBenchmarks

frameworks/Rust/fanta/: .gitignore  README.md
frameworks/Rust/fanta/ExampleApp/: Cargo.toml
frameworks/Rust/thruster/: Cargo.toml  README.md  benchmark_config.json  thruster.dockerfile
frameworks/Rust/thruster/src/: context.rs  main.rs
