[package]
name = "thruster_techempower"
version = "0.1.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]

[dependencies]
futures = "0.1"
hyper = "0.12.10"
http = "0.1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "0.6.2"
thruster = { git = "https://github.com/trezm/thruster", branch = "experiment/use_hyper" }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

